<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_settings">Settings</string>
    <string name="advanced_search_options"><b>Advanced search options</b></string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site filter</string>
    <string name="save">Save</string>

</resources>
